--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -59,6 +59,7 @@ RUN apk --no-cache --no-progress upgrade && \
 RUN ["cross-build-end"]
 
 COPY samba.sh /usr/bin/
+COPY check-smb-http.sh /usr/bin/
 
 EXPOSE 137/udp 138/udp 139 445
 
